# flint-and-timber

./: .gitignore  .gitmodules  AGENTS.md  Application.cpp  Application.h  CMakeLists.txt  CMakePresets.json  README.md  main.cpp  sdl3-git-tag.txt
.github/workflows/: build.yml  ci.yml  dawn-ci.cmake
assets/shaders/: crosshair.wgsl  world.wgsl
cmake/: GenerateAtlasHeader.cmake
new_src/: app.hpp  block.cpp  chunk.cpp  chunk.hpp  cube_geometry.cpp  cube_geometry.hpp  input.cpp  input.hpp  main.cpp  physics.hpp  player.cpp  player.hpp  raycast.hpp  texture.hpp  vertex.hpp  wireframe_renderer.hpp  world.cpp  world.hpp
new_src/ui/: crosshair.hpp  hotbar.cpp  hotbar.hpp  inventory.cpp  inventory.hpp  item_renderer.cpp  item_renderer.hpp  ui_text.cpp  ui_text.hpp
sdl3webgpu/: README.md  sdl3webgpu.c
sdl3webgpu/.github/workflows/: cmake.yml
sdl3webgpu/examples/: CMakeLists.txt  hello-sdl3webgpu.c
src/: DiligentApp.cpp  DiligentApp.hpp  FlintAndTimberApp.cpp  FlintAndTimberApp.hpp  app.cpp  app.h  block.h  cube_geometry.h  flint_utils.h  main.cpp  player.cpp  texture.cpp  texture.h  vertex.h  webgpu-utils.cpp  webgpu-utils.h  wireframe_renderer.cpp  wireframe_renderer.h  world.cpp  world.h
src/flint/: app.cpp  app.h  app.hpp  block.cpp  block.h  block.hpp  camera.cpp  camera.h  camera.hpp  chunk.cpp  chunk.h  chunk.hpp  constants.hpp  crosshair_shader.wgsl.h  cube_geometry.cpp  cube_geometry.h  cube_geometry.hpp  debug.cpp  debug.h  game_state.h  input.cpp  input.hpp  inventory.cpp  inventory.h  light.cpp  light.h  main.cpp  main.h  outline_geometry.h  outline_shader.wgsl.h  physics.hpp  player.cpp  player.h  player.hpp  raycast.cpp  raycast.h  raycast.hpp  selection_shader.wgsl.h  selection_vertex.h  shader.wgsl.h  (+14 more)
src/flint/app/: camera_controller.cpp  camera_controller.hpp
src/flint/assets/textures/: atlas.png.txt
src/flint/graphics/: chunk_mesh.cpp  chunk_mesh.hpp  crosshair_mesh.cpp  crosshair_mesh.h  crosshair_renderer.cpp  crosshair_renderer.h  debug_mesh.cpp  debug_mesh.hpp  debug_overlay_renderer.cpp  debug_overlay_renderer.h  debug_screen_renderer.cpp  debug_screen_renderer.h  embedded_atlas.hpp  inventory_ui_renderer.cpp  inventory_ui_renderer.h  mesh.cpp  mesh.hpp  render_pipeline.cpp  render_pipeline.h  render_pipeline_builder.cpp  render_pipeline_builder.h  selection_mesh.cpp  selection_mesh.h  selection_renderer.cpp  selection_renderer.h  selection_renderer.hpp  text_renderer.cpp  text_renderer.h  text_shader.wgsl.h  texture.cpp  texture.h  texture.hpp  wgsl.h  world_renderer.cpp  world_renderer.h
src/flint/init/: buffer.cpp  buffer.h  mesh.cpp  mesh.h  pipeline.cpp  pipeline.h  sdl.cpp  sdl.h  shader.cpp  shader.h  texture.cpp  texture.h  utils.h  wgpu.cpp  wgpu.h
src/flint/math/: camera.cpp  camera.hpp
src/flint/old/: chunk.cpp
src/flint/ui/: crosshair.cpp  crosshair.h  crosshair.hpp  crosshair.wgsl.h  hotbar.cpp  hotbar.hpp  inventory.cpp  inventory.hpp  item.hpp  item_renderer.cpp  item_renderer.hpp  ui_manager.cpp  ui_manager.h  ui_text.cpp  ui_text.hpp
src/flint_backup/: chunk.cpp  chunk.hpp  physics.hpp  player.cpp
src/shaders/: f_simple.sc  main_shader.wgsl.h
src/shaders/FSL/: shaders.list  triangle.frag.fsl  triangle.vert.fsl
src/ui/: crosshair.cpp  crosshair.h  hotbar.cpp  hotbar.h  inventory.cpp  inventory.h  item_renderer.cpp  item_renderer.h  ui_text.cpp
src_chunk/: main.cpp
src_chunk/flint/: block.h  camera.cpp  cube_geometry.cpp  instance.h
src_cube/flint/: app.hpp
src_cube/flint/graphics/: mesh.hpp
src_cube/flint/math/: camera.cpp
src_from_rust/: TRANSLATION_SUMMARY.md  app.cpp  block.cpp  camera.cpp  camera.h  chunk.cpp  chunk.h  cube_geometry.cpp  cube_geometry.h  debug_overlay.cpp  debug_overlay.h  input.cpp  input.h  main.cpp  physics.hpp  player.cpp  player.h  raycast.cpp  raycast.h  texture.h  wireframe_renderer.cpp  wireframe_renderer.h
src_from_rust/ui/: crosshair.cpp  crosshair.h  hotbar.cpp  inventory.cpp  inventory.h  item.cpp  item.h  item_renderer.h  ui_text.h
src_master/flint/: chunk.cpp  player.hpp
src_master/flint/graphics/: mesh.hpp  shaders.hpp
tools/atlas_generator/: CMakeLists.txt  main.cpp
webgpu/: CMakeLists.txt
webgpu/cmake/: apply_patch_idempotent.cmake  utils.cmake
webgpu/dawn/: CMakeLists.txt  FetchDawnPrecompiled.cmake  FetchDawnSource.cmake
webgpu/dawn/include/webgpu/: webgpu-raii.hpp  webgpu.hpp
webgpu/dawn/patch/: dawn.patch
webgpu/emdawnwebgpu/: CMakeLists.txt
webgpu/emdawnwebgpu/include/webgpu/: webgpu.hpp
webgpu/emscripten/: CMakeLists.txt
webgpu/emscripten/include/webgpu/: webgpu-raii.hpp  webgpu.hpp
webgpu/wgpu-native/: CMakeLists.txt  FetchWgpuNativePrecompiled.cmake
webgpu/wgpu-native/include/webgpu/: webgpu-raii.hpp  webgpu.hpp
